Moved parsing and trimming out

--- a/src/src.vcxproj
+++ b/src/src.vcxproj
@@ -34,6 +34,7 @@
     <ClCompile Include="RVExtension.cpp" />
     <ClCompile Include="Scheduler.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="Util.cpp" />
     <ClCompile Include="Worker.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -41,6 +42,7 @@
     <ClInclude Include="Job.h" />
     <ClInclude Include="NetRequest.h" />
     <ClInclude Include="Scheduler.h" />
+    <ClInclude Include="Util.h" />
     <ClInclude Include="Worker.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
