--- a/src/src.vcxproj
+++ b/src/src.vcxproj
@@ -31,6 +31,7 @@
     <ClCompile Include="GetRequest.cpp" />
     <ClCompile Include="Job.cpp" />
     <ClCompile Include="NetRequest.cpp" />
+    <ClCompile Include="PostRequest.cpp" />
     <ClCompile Include="RVExtension.cpp" />
     <ClCompile Include="Scheduler.cpp" />
     <ClCompile Include="Main.cpp" />
@@ -41,6 +42,7 @@
     <ClInclude Include="GetRequest.h" />
     <ClInclude Include="Job.h" />
     <ClInclude Include="NetRequest.h" />
+    <ClInclude Include="PostRequest.h" />
     <ClInclude Include="Scheduler.h" />
     <ClInclude Include="Util.h" />
     <ClInclude Include="Worker.h" />
